[project]
name = "trueblocks-python-sdk"
version = "0.1.0"
authors = [
	{ name = "Thomas Jay Rush", email = "jrush@quickblocks.io"},
	{ name = "omar", email = "omaraziz.dev@gmail.com"},
	{ name = "Dawid Szlachta"},
	{ name = "Mihai Cosma", email = "mcosma@gmail.com" },
	]

[project.urls]
"Homepage" = "https://github.com/TrueBlocks/trueblocks-core/blob/master/sdk/python/"

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.ruff]
# Default is: pycodestyle (E) and Pyflakes (F)
# We add flake8-builtins (A), pydocstyle (D), isort (I), pep8-naming (N), and pylint (PL).
# We remove pycodestyle (E) since it throws erroneous line too long errors.
# We remove Pyflakes (F) since it complains about `import *` which we need.
select = ["A", "D", "I", "N", "PL"]

# We ignore the following rules:
# D100: Missing docstring in public module
# D103: Missing docstring in public function
# D203: 1 blank line required before class docstring (incompatible with D211: no blank lines before class docstring)
# D213: multi-line-summary-second-line (incompatible with D212: multi-line summary should start at the first line)
ignore = ["D100", "D103", "D203", "D213"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "D", "I", "N", "PL"]
unfixable = []

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
